# conan-math-lib

./: README.md
consuming/: CMakeLists.txt  conanfile.py
consuming/src/: main.cpp
mathlib/: CMakeLists.txt  README.md  conanfile.py
mathlib/include/mathlib/: mathlib.h
mathlib/src/: mathlib.cpp
mathlib/test/: main.cpp
mathlib/test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
mathlib/test_package/src/: main.cpp
